--- a/src/main/resources/static/gameStyleSheet.css
+++ b/src/main/resources/static/gameStyleSheet.css
@@ -1,14 +1,17 @@
 body{
-	position: fixed;
+	/*position: fixed;*/
 	width: 100%;
 	height: 100%;
-	left: 0;
+	margin: 0;
+
 	top:0;
 	
 	}
 .container{
 	background: #2A2D34;
+	padding-bottom: 15px;
 	height: 100%;
+	width: 100%;
 	}
 
 .tile-container{
