--- a/src/main/resources/static/loginStylesheet.css
+++ b/src/main/resources/static/loginStylesheet.css
@@ -1,11 +1,26 @@
-*{
-	border: 1px solid red;
+body{
+	/*position: fixed;*/
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	background: #2A2D34;
+	top:0;
+	
+	}
+.container{
+	
+
+
 	}
 
 .login-form{
 	display: block;
 	width: 30%;
-	margin: 10px auto;
+	margin: 5% auto;
+	background: #3b4049;
+	border-radius: 5px;
+	color: whitesmoke;
+	padding: 20px;
 	}
 .input-fields{
 	display: block;
@@ -14,4 +29,16 @@
 	}
 .input-fields input{
 	width: 100%;
+	height: 40px;
+	}
+.login-form button{
+	background: #00e8aa;
+	border: none;
+	border: 1px solid whitesmoke;
+	margin: 10px 25%;
+	width: 25%;
+	height: 40px;
+	color: whitesmoke;
+	font-size: 18px;
+	font-weight: bold;
 	}
