Creation of signup form

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" th:href="@{/loginStylesheet.css}" href="../static/loginStylesheet.css"/>
 	<meta charset="UTF-8"/>
-	<title>Title</title>
+	<title>Login</title>
 </head>
 <body>
 <div class="container">
