--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,10 +12,10 @@
 		<div class="input-fields">
 			<h2>Login</h2>
 			<div>
-				<input name="username" type="text" placeholder="Username"/>
+				<input name="username" type="text" placeholder="Username" required="required"/>
 			</div>
 			<div>
-				<input name="password" type="password" placeholder="Password"/>
+				<input name="password" type="password" placeholder="Password" required="required"/>
 			</div>
 		</div>
 		<div>
