--- a/src/main/resources/templates/sign_up.html
+++ b/src/main/resources/templates/sign_up.html
@@ -5,8 +5,8 @@
 	<title>Title</title>
 </head>
 <body>
-<div>
-	<form>
+<div class="container">
+	<form class="sign-up-form">
 		<h3>Sign Up Form</h3>
 		<input type="text" placeholder="First Name:">
 		<input type="text" placeholder="Last Name:">
