--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@
 		</div>
 		<div>
 			<button>Login</button>
-			<a href="#"><label>Sign-up</label></a>
+			<a href="/templates/sign_up.html" th:href="@{/signup}"><label>Sign-up</label></a>
 		</div>
 	</form>
 </div>
