--- a/src/main/resources/static/gameStyleSheet.css
+++ b/src/main/resources/static/gameStyleSheet.css
@@ -55,8 +55,13 @@ h3.info{
 	color: whitesmoke;
 	
 	}
+.tile.head-titles h3{
+	background: #006891;
+	font-size:50px;
+	}
+
 .tile{
-	background: #009DDC;
+	background: #0081B5;
 	margin: 1px;
 	display: block;
 	border:1px solid gray;
@@ -64,9 +69,13 @@ h3.info{
 	height: 100px;
 	text-align: center;
 	}
+.tile .head-titles div {
+	background: #006289;
+	}
+
 .response-board{
 	/*border: 1px solid black;*/
-	width: 50%;
+	width: 100%;
 	margin: 0 auto;
 	background: #3B4049;
 	padding:0 30px 30px 30px;
@@ -78,23 +87,49 @@ h3.info{
 	border: 1px solid white;
 	border-radius: 5px;
 	font-size: 16px;
-	width: 100%;
-	height: 50px;
+	width: 23%;
+	height: 100px;
 	color: whitesmoke;
 	}
-.response-board button:hover{
-	background: #00C48F;
+.response-board .options:hover{
+	background: #A7B3CE;
 	font-size: 20px;
 	}
 .options{
-	background: #009B72;
+	background: #6F7789;
 	}
 .correct{
+	background: #00E8AA;
+	}
+.correct:hover{
 	background: #00E8AA;
 	}
 .wrong{
 	background: #F26430;
 	}
+.wrong:hover{
+	background: #F26430;
+	}
 #timer{
 	float: right;
+	}
+
+#overlay {
+	position: fixed;
+	top: 8;
+	left: 0;
+	width: 100%;
+	/*height: 40%;*/
+	/*background-color: rgba(100,100,100, .0);*/
+	/*margin: auto;*/
+	/*filter:alpha(opacity=50);*/
+	/*-moz-opacity:0.5;*/
+	/*-khtml-opacity: 0.5;*/
+	/*opacity: .8;*/
+	z-index: 10000;
+	}
+#overlay label{
+	font-size: 30px;
+	margin-top: 5%;
+	padding-top: 5%;
 	}
