--- a/src/main/resources/static/loginStylesheet.css
+++ b/src/main/resources/static/loginStylesheet.css
@@ -7,10 +7,13 @@ body{
 	top:0;
 	
 	}
-.container{
-	
-
-
+.container a{
+	text-decoration: none;
+	color: whitesmoke;
+	background: #2a2d34;
+	border: 1px solid whitesmoke;
+	padding: 10px;
+	width: 25%;
 	}
 
 .login-form{
@@ -35,7 +38,7 @@ body{
 	background: #00e8aa;
 	border: none;
 	border: 1px solid whitesmoke;
-	margin: 10px 25%;
+	margin: 11px 0 0 25%;
 	width: 25%;
 	height: 40px;
 	color: whitesmoke;
