--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -21,7 +21,7 @@
 			</div>
 		</div>
 		<div class="tile-category-container" th:each="category : ${categories}">
-			<div class="tile">
+			<div class="tile head-titles">
 				<div>
 					<h4 th:text="${category.category}">Dinosaurs</h4>
 				</div>
@@ -417,8 +417,8 @@
 			<form>
 				<button class="options">Option 1.</button>
 				<button class="options">Option 2.</button>
-				<button class="correct">Option 3.</button>
-				<button class="wrong">Option 4.</button>
+				<button class="options">Option 3.</button>
+				<button class="options">Option 4.</button>
 
 			</form>
 		</div>
