--- a/src/main/resources/templates/sign_up.html
+++ b/src/main/resources/templates/sign_up.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-	<meta charset="UTF-8">
-	<title>Title</title>
+	<link rel="stylesheet" type="text/css" th:href="@{/loginStylesheet.css}" href="../static/loginStylesheet.css"/>
+	<link rel="stylesheet" type="text/css" th:href="@{/signupStylesheet.css}" href="../static/signupStylesheet.css"/>
+	<meta charset="UTF-8"/>
+	<title>Login</title>
 </head>
 <body>
 <div class="container">
-	<form class="sign-up-form">
-		<h3>Sign Up Form</h3>
-		<input type="text" placeholder="First Name:">
-		<input type="text" placeholder="Last Name:">
-		<input type="text" placeholder="Username:">
-		<input type="password" placeholder="Password:">
+	<form class="sign-up-form" th:action="@{/addAccount}" method="post">
+		<div class="input-fields">
+			<h3>Sign Up Form</h3>
+			<div>
+				<input type="text" name="firstName" placeholder="First Name:" required="required"/>
+			</div>
+			<div>
+				<input type="text" name="lastName" placeholder="Last Name:" required="required"/>
+			</div>
+			<div>
+				<input type="text" name="username" placeholder="Username:" required="required"/>
+			</div>
+			<div>
+				<input type="password" name="password" placeholder="Password:" required="required"/>
+			</div>
+		</div>
+
+			<button>Create Account</button>
+
 	</form>
 </div>
 
