--- a/src/main/resources/static/loginStylesheet.css
+++ b/src/main/resources/static/loginStylesheet.css
@@ -31,6 +31,9 @@ body{
 	margin: 5px auto;
 	}
 .input-fields input{
+	background: white;
+	border: .5px solid #3b4049;
+	font-size: 14px;
 	width: 100%;
 	height: 40px;
 	}
@@ -44,4 +47,21 @@ body{
 	color: whitesmoke;
 	font-size: 18px;
 	font-weight: bold;
+	}
+@media screen and (max-width: 800px) {
+	.login-form{
+		display: block;
+		width: 90%;
+		margin: 5% auto;
+		background: #3b4049;
+		border-radius: 5px;
+		color: whitesmoke;
+		padding: 20px;
+		}
+	.input-fields{
+		display: block;
+		width: 75%;
+		margin: 5px auto;
+		}
+
 	}
